// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pixiv illustDetail:103905962[manga] 1`] = `
{
  "caption": "C101の新刊サンプルです！<br /><br />恋愛アドベンチャーゲーム『あくありうむ。』に登場する「猫」。<br />彼はどんなことを考えていたのか?<br />彼にとって、これはどんな物語だったのか?<br />そういった本編で語られなかった部分を想像で掘り下げたお話です。<br />※本文は『あくありうむ。』のネタバレおよび多少の負傷描写を含みます。苦手な方はご注意ください。<br /><br />【1日目東C-13b/くらうでぃ】でお待ちしています！<br /><br />メロンブックス様にて新刊の事前予約も始まっています！<br />気になる方は是非チェックしてみてください！<br />【<a href="https://www.melonbooks.co.jp/detail/detail.php?product_id=1746005" target='_blank' rel='noopener noreferrer'>https://www.melonbooks.co.jp/detail/detail.php?product_id=1746005</a>】",
  "comment_access_control": 0,
  "create_date": "2022-12-25T18:31:02+09:00",
  "event_banners": null,
  "height": 3541,
  "id": 103905962,
  "illust_ai_type": 1,
  "illust_book_style": 0,
  "image_urls": {
    "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p0_master1200.jpg",
    "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p0_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p0_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "meta_pages": [
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p0_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p0_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p0.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p0_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p1_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p1_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p1.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p1_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p2_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p2_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p2.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p2_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p3_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p3_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p3.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p3_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p4_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p4_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p4.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p4_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p5_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p5_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p5.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p5_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p6_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p6_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p6.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p6_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2022/12/25/18/31/02/103905962_p7_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2022/12/25/18/31/02/103905962_p7_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2022/12/25/18/31/02/103905962_p7.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2022/12/25/18/31/02/103905962_p7_square1200.jpg",
      },
    },
  ],
  "meta_single_page": {},
  "page_count": 8,
  "request": null,
  "restrict": 0,
  "sanity_level": 2,
  "seasonal_effect_animation_urls": null,
  "series": null,
  "tags": [
    {
      "name": "漫画",
      "translated_name": null,
    },
    {
      "name": "C101",
      "translated_name": null,
    },
    {
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "name": "VTuber",
      "translated_name": null,
    },
    {
      "name": "バーチャルYouTuber",
      "translated_name": null,
    },
    {
      "name": "湊あくあ",
      "translated_name": null,
    },
    {
      "name": "あくありうむ。",
      "translated_name": null,
    },
  ],
  "title": "【C101】あくあに恋した猫の話",
  "tools": [
    "SAI",
    "CLIP STUDIO PAINT",
  ],
  "type": "manga",
  "user": {
    "account": "borinn0812",
    "id": 8166267,
    "is_accept_request": false,
    "is_followed": false,
    "name": "くらうど",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2017/08/25/23/47/25/13106932_2caeb7aa12108a818ebf4d6671caffa6_170.jpg",
    },
  },
  "visible": true,
  "width": 2508,
  "x_restrict": 0,
}
`;

exports[`pixiv illustDetail:107565629[illust] 1`] = `
{
  "caption": "",
  "comment_access_control": 0,
  "create_date": "2023-04-27T13:39:51+09:00",
  "event_banners": null,
  "height": 2626,
  "id": 107565629,
  "illust_ai_type": 1,
  "illust_book_style": 0,
  "image_urls": {
    "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2023/04/27/13/39/51/107565629_p0_master1200.jpg",
    "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2023/04/27/13/39/51/107565629_p0_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2023/04/27/13/39/51/107565629_p0_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "meta_pages": [],
  "meta_single_page": {
    "original_image_url": "https://i.pximg.net/img-original/img/2023/04/27/13/39/51/107565629_p0.png",
  },
  "page_count": 1,
  "request": null,
  "restrict": 0,
  "sanity_level": 2,
  "seasonal_effect_animation_urls": null,
  "series": null,
  "tags": [
    {
      "name": "バーチャルYouTuber",
      "translated_name": null,
    },
    {
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "name": "VTuber",
      "translated_name": null,
    },
    {
      "name": "百鬼あやめ",
      "translated_name": null,
    },
    {
      "name": "大神ミオ",
      "translated_name": null,
    },
    {
      "name": "白上フブキ",
      "translated_name": null,
    },
    {
      "name": "衣装チェンジ",
      "translated_name": null,
    },
    {
      "name": "Incredibly",
      "translated_name": null,
    },
    {
      "name": "バーチャルYouTuber5000users入り",
      "translated_name": null,
    },
  ],
  "title": "フブキちゃん衣装着てみたみょ～ん余",
  "tools": [],
  "type": "illust",
  "user": {
    "account": "yukitohoshizora",
    "id": 16668308,
    "is_accept_request": false,
    "is_followed": false,
    "name": "桜もち",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2021/10/21/16/01/24/21613958_387e1f6d986a59108e38ac07ce749ba6_170.png",
    },
  },
  "visible": true,
  "width": 1728,
  "x_restrict": 0,
}
`;

exports[`pixiv illustSeries: illust_series_detail 1`] = `
{
  "caption": "ホロライブ学園でのみんなの生活の一幕",
  "cover_image_urls": {
    "medium": "https://i.pximg.net/c/782x410_80_a2_g5/illust-series-cover-original/img/2022/05/25/20/15/50/5XnC1tDrHglYYLxgjDx4sz3ep3e0ryFU.jpg",
  },
  "create_date": "2022-02-20T18:38:14+09:00",
  "height": 900,
  "id": 147483,
  "title": "ホロライブ学パロ",
  "user": {
    "account": "itimi",
    "id": 147203,
    "is_accept_request": false,
    "is_followed": false,
    "name": "いちみ＠ C107 ア－17b",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2019/05/14/22/18/07/15770409_7935f0f46dcaddffd99f325bca49e2d1_170.jpg",
    },
  },
  "watchlist_added": true,
  "width": 710,
}
`;

exports[`pixiv illustSeries: illust_series_first_illust 1`] = `
{
  "caption": "時にはこういう感じも良いなと思いつつ( ˘ω˘ )<br />後半はいろいろラフ画<br />合間合間にまたやったりするやも<br /><br />こっそりとskeb【<a href="https://skeb.jp/@itimi" target='_blank' rel='noopener noreferrer'>https://skeb.jp/@itimi</a>】はじめてました<br /><br />新刊の『あくおかSUMMER』【<strong><a href="pixiv://illusts/92103181">illust/92103181</a></strong>】委託販売中です！ヽ(=´▽\`=)ﾉ<br />今回は全編新規で夏の海のお話です！ﾎﾛﾗｲﾌﾞｻﾏｰｯ<br />購入報告や感想ありがとうございます、励みになります(✿´ ꒳ \` )<br /><br />書店様<br />メロン【<a href="http://bit.ly/1s21HMK" target='_blank' rel='noopener noreferrer'>http://bit.ly/1s21HMK</a> 】<br />とら【<a href="https://goo.gl/f8zmgy" target='_blank' rel='noopener noreferrer'>https://goo.gl/f8zmgy</a> 】<br />Grep【<a href="https://goo.gl/S5Rnvr" target='_blank' rel='noopener noreferrer'>https://goo.gl/S5Rnvr</a> 】<br /><br />電子書籍<br />メロン【<a href="http://bit.ly/1s21HMK" target='_blank' rel='noopener noreferrer'>http://bit.ly/1s21HMK</a> 】<br />DLSite【<a href="http://ur2.link/PyA0" target='_blank' rel='noopener noreferrer'>http://ur2.link/PyA0</a> 】",
  "create_date": "2021-10-27T20:09:10+09:00",
  "event_banners": null,
  "height": 900,
  "id": 93720367,
  "illust_ai_type": 0,
  "illust_book_style": 0,
  "image_urls": {
    "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p0_master1200.jpg",
    "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p0_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p0_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "meta_pages": [
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p0_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p0_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p0.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p0_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p1_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p1_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p1.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p1_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p2_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p2_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p2.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p2_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p3_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p3_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p3.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p3_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p4_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p4_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p4.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p4_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p5_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p5_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p5.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p5_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p6_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p6_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p6.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p6_square1200.jpg",
      },
    },
    {
      "image_urls": {
        "large": "https://i.pximg.net/c/600x1200_90/img-master/img/2021/10/27/20/09/10/93720367_p7_master1200.jpg",
        "medium": "https://i.pximg.net/c/540x540_70/img-master/img/2021/10/27/20/09/10/93720367_p7_master1200.jpg",
        "original": "https://i.pximg.net/img-original/img/2021/10/27/20/09/10/93720367_p7.jpg",
        "square_medium": "https://i.pximg.net/c/360x360_70/img-master/img/2021/10/27/20/09/10/93720367_p7_square1200.jpg",
      },
    },
  ],
  "meta_single_page": {},
  "page_count": 8,
  "request": null,
  "restrict": 0,
  "sanity_level": 2,
  "seasonal_effect_animation_urls": null,
  "series": {
    "id": 147483,
    "title": "ホロライブ学パロ",
  },
  "tags": [
    {
      "name": "漫画",
      "translated_name": null,
    },
    {
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "name": "湊あくあ",
      "translated_name": null,
    },
    {
      "name": "あくおか",
      "translated_name": null,
    },
    {
      "name": "猫又おかゆ",
      "translated_name": null,
    },
    {
      "name": "学パロ",
      "translated_name": null,
    },
  ],
  "title": "あくおか学パロまとめ",
  "tools": [
    "SAI",
    "Photoshop",
    "ComicStudio",
  ],
  "type": "manga",
  "user": {
    "account": "itimi",
    "id": 147203,
    "is_accept_request": false,
    "is_followed": false,
    "name": "いちみ＠ C107 ア－17b",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2019/05/14/22/18/07/15770409_7935f0f46dcaddffd99f325bca49e2d1_170.jpg",
    },
  },
  "visible": true,
  "width": 637,
  "x_restrict": 0,
}
`;

exports[`pixiv novelDetail 1`] = `
{
  "caption": "色々と独自解釈、設定捏造があります。<br />張り詰めるものが多いと、人はいつか破裂する。<br /><br />Twitterやってます→【<strong><a href="https://twitter.com/somari1101" target="_blank">twitter/somari1101</a></strong>】",
  "comment_access_control": 0,
  "create_date": "2020-08-22T21:24:48+09:00",
  "id": 13574875,
  "image_urls": {
    "large": "https://i.pximg.net/c/240x480_80/novel-cover-master/img/2020/08/22/21/24/48/13574875_5c3aae3260ca71f457dd4d7f20342edf_master1200.jpg",
    "medium": "https://i.pximg.net/c/176x352/novel-cover-master/img/2020/08/22/21/24/48/13574875_5c3aae3260ca71f457dd4d7f20342edf_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/128x128/novel-cover-master/img/2020/08/22/21/24/48/13574875_5c3aae3260ca71f457dd4d7f20342edf_square1200.jpg",
  },
  "is_bookmarked": false,
  "is_muted": false,
  "is_mypixiv_only": false,
  "is_original": false,
  "is_x_restricted": false,
  "novel_ai_type": 0,
  "page_count": 7,
  "request": null,
  "restrict": 0,
  "series": {},
  "tags": [
    {
      "added_by_uploaded_user": true,
      "name": "二次創作",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "hololive",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "VTuber",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "大空スバル",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "姫森ルーナ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "スバルーナ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "百合",
      "translated_name": null,
    },
  ],
  "text_length": 6931,
  "title": "それはまるで鍵盤を奏でる細指の如く",
  "user": {
    "account": "user_wrmt2824",
    "id": 53003997,
    "is_accept_request": true,
    "is_followed": false,
    "name": "蘇鞠-そまり-",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2020/07/03/22/56/37/18928177_6695a072d51b3261e7cdff407f6bc4fd_170.jpg",
    },
  },
  "visible": true,
  "x_restrict": 0,
}
`;

exports[`pixiv novelSeries: illust_series_first_illust 1`] = `
{
  "caption": "どうも、忙しくてこのシリーズの#3が7/1というのをみて驚愕している作者です。<br />いや〜、そろそろ年を越しますね。正直ここまで投稿が遅れると思ってなかったです。<br />本当に申し訳ない。<br />不定期と言えど割と頑張って投稿するのでこれからも宜しくお願い致します。<br />そしてこの回、実は一昨日の夕方に出る予定だったんですけど書いてる途中でpcが落ちて内容消えて萎えたので今日改めて出しています(弱々で申し訳ない)。<br />後編も早めに出します。<br />長らくお待たせしました、コメント等励みになるので是非感想など書き残してって下さい！では、本編どうぞ！",
  "create_date": "2021-12-25T09:00:50+09:00",
  "id": 16664510,
  "image_urls": {
    "large": "https://i.pximg.net/c/240x480_80/novel-cover-master/img/2021/12/25/09/00/50/16664510_a434e352d8c321046bd5857b613bf7ce_master1200.jpg",
    "medium": "https://i.pximg.net/c/176x352/novel-cover-master/img/2021/12/25/09/00/50/16664510_a434e352d8c321046bd5857b613bf7ce_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/128x128/novel-cover-master/img/2021/12/25/09/00/50/16664510_a434e352d8c321046bd5857b613bf7ce_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "is_mypixiv_only": false,
  "is_original": false,
  "is_x_restricted": false,
  "novel_ai_type": 0,
  "page_count": 1,
  "request": null,
  "restrict": 0,
  "series": {
    "id": 7474721,
    "title": "夏色吹雪の恋人生活",
  },
  "tags": [
    {
      "added_by_uploaded_user": true,
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "夏色吹雪",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "夏色まつり",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "白上フブキ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "百合",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "壊滅的文章力",
      "translated_name": null,
    },
  ],
  "text_length": 1583,
  "title": "休日といえば....　[前編]",
  "user": {
    "account": "nyao_alp-lck",
    "id": 69131958,
    "is_accept_request": false,
    "is_access_blocking_user": false,
    "is_followed": false,
    "name": "nyao1820-RdeCua",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2021/07/08/07/02/09/21000900_15ac086e2f005f45794becba5c9dcc00_170.jpg",
    },
  },
  "visible": true,
  "x_restrict": 0,
}
`;

exports[`pixiv novelSeries: novel_series_detail 1`] = `
{
  "caption": "一話から非日常で始まるのあれですが、温かい目で見て下さい。
別シリーズとして学生時代の話的なのも作ろうと思ってます。
基本は甘いストーリーを書いてます。(甘いのが好きなので)
文章力皆無で投稿スピードあんま早くないですが、気長に待ってくれると嬉しいです。",
  "display_text": "一話から非日常で始まるのあれですが、温かい目で見て下さい。
別シリーズとして学生時代の話的なのも作ろうと思ってます。
基本は甘いストーリーを書いてます。(甘いのが好きなので)
文章力皆無で投稿スピードあんま早くないですが、気長に待ってくれると嬉しいです。",
  "id": 7474721,
  "is_concluded": false,
  "is_original": false,
  "novel_ai_type": 0,
  "title": "夏色吹雪の恋人生活",
  "total_character_count": 10671,
  "user": {
    "account": "nyao_alp-lck",
    "id": 69131958,
    "is_accept_request": false,
    "is_access_blocking_user": false,
    "is_followed": false,
    "name": "nyao1820-RdeCua",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2021/07/08/07/02/09/21000900_15ac086e2f005f45794becba5c9dcc00_170.jpg",
    },
  },
  "watchlist_added": true,
}
`;

exports[`pixiv novelSeries: novel_series_first_novel 1`] = `
{
  "caption": "甘い系です(？)。キャラ崩壊の可能性があります。<br />初投稿なのでそこは温かい目で見てもらえると助かります。あとタイトル思いつきませんでした...雑です()<br />ちなみに作者は膝枕が好きなのでそのシチュエーションが多々あります。<br />設定<br />・最初は全然関係ない話　←これ重要<br />・基本まつりちゃん一人称<br />・フブキがお酒飲める、夏色吹雪は同居している など<br />これらが大丈夫な人は見ていってくださいね〜<br />感想などコメントして下さると励ましになります。<br />それでは〜",
  "create_date": "2021-06-28T23:15:45+09:00",
  "id": 15513340,
  "image_urls": {
    "large": "https://i.pximg.net/c/240x480_80/novel-cover-master/img/2021/06/28/23/15/46/15513340_75da1116710a463d897c331fb81fb605_master1200.jpg",
    "medium": "https://i.pximg.net/c/176x352/novel-cover-master/img/2021/06/28/23/15/46/15513340_75da1116710a463d897c331fb81fb605_master1200.jpg",
    "square_medium": "https://i.pximg.net/c/128x128/novel-cover-master/img/2021/06/28/23/15/46/15513340_75da1116710a463d897c331fb81fb605_square1200.jpg",
  },
  "is_bookmarked": true,
  "is_muted": false,
  "is_mypixiv_only": false,
  "is_original": false,
  "is_x_restricted": false,
  "novel_ai_type": 0,
  "page_count": 1,
  "request": null,
  "restrict": 0,
  "series": {
    "id": 7474721,
    "title": "夏色吹雪の恋人生活",
  },
  "tags": [
    {
      "added_by_uploaded_user": true,
      "name": "ホロライブ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "夏色吹雪",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "夏色まつり",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "白上フブキ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "百合",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "大神ミオ",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "大空スバル",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "紫咲シオン",
      "translated_name": null,
    },
    {
      "added_by_uploaded_user": true,
      "name": "壊滅的文章力",
      "translated_name": null,
    },
  ],
  "text_length": 4795,
  "title": "非日常と、日常と。",
  "user": {
    "account": "nyao_alp-lck",
    "id": 69131958,
    "is_accept_request": false,
    "is_access_blocking_user": false,
    "is_followed": false,
    "name": "nyao1820-RdeCua",
    "profile_image_urls": {
      "medium": "https://i.pximg.net/user-profile/img/2021/07/08/07/02/09/21000900_15ac086e2f005f45794becba5c9dcc00_170.jpg",
    },
  },
  "visible": true,
  "x_restrict": 0,
}
`;

exports[`pixiv userDetail: profile 1`] = `
{
  "address_id": 19,
  "background_image_url": "https://i.pximg.net/c/1200x600_90_a2_g5/background/img/2023/03/21/18/48/06/16568776_4b20bf2ee729bf13b56f41ea0e461c4f_master1200.jpg",
  "birth": "1990-03-10",
  "birth_day": "03-10",
  "birth_year": 1990,
  "country_code": "",
  "gender": "unknown",
  "is_premium": false,
  "is_using_custom_profile_image": true,
  "job": "IT関係",
  "job_id": 1,
  "pawoo_url": "https://pawoo.net/oauth_authentications/16568776?provider=pixiv",
  "region": "日本 山梨県",
  "total_illust_series": 0,
  "total_illusts": 0,
  "total_manga": 0,
  "total_mypixiv_users": 1,
  "total_novel_series": 0,
  "total_novels": 0,
  "twitter_account": "ihc_amot",
  "twitter_url": "https://twitter.com/ihc_amot",
  "webpage": null,
}
`;

exports[`pixiv userDetail: profile_publicity 1`] = `
{
  "birth_day": "private",
  "birth_year": "private",
  "gender": "private",
  "job": "private",
  "pawoo": false,
  "region": "private",
}
`;

exports[`pixiv userDetail: user 1`] = `
{
  "account": "tomachi_book000",
  "comment": "ASMR・活字中毒オタク。ツイート・いいねなど🔞
ブックマークは定期的に非公開にさせてます。",
  "id": 16568776,
  "is_access_blocking_user": false,
  "is_followed": false,
  "name": "ihcamot",
  "profile_image_urls": {
    "medium": "https://i.pximg.net/user-profile/img/2023/03/21/18/29/17/24183221_2fffeb121fe5fb57711d687c1eed2b8a_170.png",
  },
}
`;

exports[`pixiv userDetail: workspace 1`] = `
{
  "chair": "",
  "comment": "",
  "desk": "",
  "desktop": "",
  "monitor": "",
  "mouse": "",
  "music": "",
  "pc": "",
  "printer": "",
  "scanner": "",
  "tablet": "",
  "tool": "",
  "workspace_image_url": null,
}
`;
